src/test/ui/feature-gates/feature-gate-generic_associated_types.stderr
error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:4:5
   |
LL |     type Pointer<T>: Deref<Target = T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:6:5
   |
LL |     type Pointer2<T>: Deref<Target = T> where T: Clone, U: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:6:5
   |
LL |     type Pointer2<T>: Deref<Target = T> where T: Clone, U: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:14:5
   |
LL |     type Pointer<Usize> = Box<Usize>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:16:5
   |
LL |     type Pointer2<U32> = Box<U32>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:22:5
   |
LL |     type Assoc where Self: Sized;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:27:5
   |
LL |     type Assoc where Self: Sized = Foo;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0277]: the trait bound `U32: Clone` is not satisfied
  --> $DIR/feature-gate-generic_associated_types.rs:16:26
   |
LL |     type Pointer2<U32> = Box<U32>;
   |                          ^^^^^^^^ the trait `Clone` is not implemented for `U32`
   |
help: consider restricting type parameter `U32`
   |
LL |     type Pointer2<U32: std::clone::Clone> = Box<U32>;
   |                      +++++++++++++++++++

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
